Rewrite tail-viewer with pattern-based highlighting, search, stdin mode, and dark theme GUI